the description is added to lab 8

--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,8 @@
         <log4j>2.19.0</log4j>
         <opencsv>5.7.1</opencsv>
         <maven-surefire-plugin>2.22.0</maven-surefire-plugin>
-        <testng.xml>fullUITestSuite.xml</testng.xml>
+        <testng.xml>allTests.xml</testng.xml>
+        <commons-io>2.11.0</commons-io>
     </properties>
 
     <dependencies>
@@ -59,7 +60,7 @@
         <dependency>
             <groupId>commons-io</groupId>
             <artifactId>commons-io</artifactId>
-            <version>2.11.0</version>
+            <version>${commons-io}</version>
         </dependency>
 
     </dependencies>
