--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
         <maven-surefire-plugin>2.22.0</maven-surefire-plugin>
         <testng.xml>positiveCreateAccountTestSuiteOnSauceLabs.xml</testng.xml>
         <commons-io>2.11.0</commons-io>
+        <jaxb-api>2.3.1</jaxb-api>
     </properties>
 
     <dependencies>
@@ -62,6 +63,19 @@
             <artifactId>commons-io</artifactId>
             <version>${commons-io}</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.saucelabs</groupId>
+            <artifactId>sauce_testng</artifactId>
+            <version>2.1.21</version>
+        </dependency>
+
+        <dependency>
+            <groupId>javax.xml.bind</groupId>
+            <artifactId>jaxb-api</artifactId>
+            <version>${jaxb-api}</version>
+        </dependency>
+
 
     </dependencies>
 
