--- a/src/main/resources/sauceLabs/sauceLabs.properties
+++ b/src/main/resources/sauceLabs/sauceLabs.properties
@@ -1,2 +1,2 @@
-sauceLabs.userName = oauth-vira.harasymiv-5fe59
-sauceLabs.accessKey = 06579d23-fed1-4e51-84da-bb2151536b7c
+sauceLabs.userName = write your name
+sauceLabs.accessKey = write your access key
